# RCI_radiation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
config/reactor_room/: map_data.yaml  nav2_params.yaml
config/single_source/: IDW.yaml  map_data.yaml  nav2_params.yaml
data/cumulation/single_source/: avoid.csv  avoid_35.csv  avoid_thres05_60deg_ver1.csv  avoid_thres10_60deg_ver1.csv  avoid_thres10_60deg_ver2.csv  avoid_thres10_60deg_ver3.csv  avoid_thres10_60deg_ver4.csv  avoid_thres20_60deg_ver1.csv  avoid_thres30_60deg_ver1.csv  avoid_thres30_60deg_ver2.csv  avoid_thres30_60deg_ver3.csv  avoid_thres30_60deg_ver4.csv  no_avoid.csv  no_avoid_vel10.csv
data/current_map/: intensity.csv  intensity_gp.csv
data/reactor_room/: entire_intensity.csv  intensity_gp.csv  obstacles.csv
data/single_source/: intensity.csv
data/waypoint/: single_source.csv  test.csv
include/radiation_simulation/: radiation_layer.hpp  radiation_sensor_plugin.hpp  radiation_static_layer.hpp
launch/: map_sweeper.launch.py  reactor_room_spawn.launch.py  reactor_room_waypoint.launch.py
map/obstacle/: single_source.yaml
map/radiation_static/: radiation_static_map.pgm  radiation_static_map_resized.yaml
models/overlays/: textured_plane.dae
rviz/: radiation_visualization.rviz
scripts/: GP_Filter.py  SL_sweeper_node.py  radiation_logger.py
scripts/map_editor/: convert_gp_to_Pgm_Yaml.py  make_textured_plane.py
src/: radiation_source_plugin.cpp  radiation_visualization_node.cpp
src/radiatino_simulation/src/: radiation_map_generator.cpp  radiation_sensor_plugin.cpp  radiation_virtual_sensor.cpp
src/radiation_simulation/config/reactor_room/: IDW.yaml
src/radiation_simulation/data/cumulation/single_source/: avoid.csv  avoid_35.csv  avoid_thres05_60deg_ver1.csv  avoid_thres10_60deg_ver1.csv  avoid_thres10_60deg_ver2.csv  avoid_thres10_60deg_ver3.csv  avoid_thres10_60deg_ver4.csv  avoid_thres20_60deg_ver1.csv  avoid_thres30_60deg_ver1.csv  avoid_thres30_60deg_ver2.csv  avoid_thres30_60deg_ver3.csv  avoid_thres30_60deg_ver4.csv  no_avoid.csv  no_avoid_vel10.csv
src/radiation_simulation/data/current_map/: intensity_gp.csv  obstacles.csv
src/radiation_simulation/data/reactor_room/: intensity.csv  intensity_gp.csv  sources.csv
src/radiation_simulation/data/single_source/: entire_intensity.csv  sources.csv
src/radiation_simulation/data/waypoint/: waypoint.csv
src/radiation_simulation/include/radiation_simulation/: radiation_source_plugin.hpp
src/radiation_simulation/launch/: explore_radiation.launch.py  single_source_spawn.launch.py  single_source_waypoint.launch.py
src/radiation_simulation/map/merged/: merged_map.pgm  merged_map.yaml
src/radiation_simulation/map/obstacle/: reactor_room.pgm  reactor_room.yaml  single_source.pgm
src/radiation_simulation/map/radiation_static/: radiation_static_map.yaml  radiation_static_map_resized.pgm
src/radiation_simulation/scripts/: cumulation_analyzer.py  obstacle_marker_publisher.py  trajectory_publisher.py  waypoint_nav.py
src/radiation_simulation/scripts/map_editor/: ground_overlay_publisher.py  merge_maps.py  resize_radiation_map.py
src/radiation_simulation/src/: radiation_layer.cpp  radiation_obstacle_plugin.cpp  radiation_static_layer.cpp
src/radiation_simulation/urdf/: model.config
src/radiation_simulation/worlds/: single_source.world
src/radiation_simulation/worlds/reactor_room/: reactor_room.world
src/radiation_simulation/worlds/reactor_room/models/: MezzanineFloor_boratedConcrete.dae  MezzanineOverhead_stainlessSteel.dae  MezzanineShielding_boratedConcrete_1.dae  MezzanineSupports_concrete_1.dae  MezzanineSupports_concrete_2.dae  MezzanineSupports_concrete_3.dae  MezzanineTankSet3_stainlessSteel.dae  MezzanineTankSet4Plinth_concrete.dae  MezzanineTankSetPlinth_concrete.dae  MezzanineTankSet_stainlessSteel.dae  StairsHandrail_aluminium_1.dae  tankSet1_pipework_stainlessSteel_2.dae  tankSet1_pipework_stainlessSteel_3.dae  tankSet1_pipework_stainlessSteel_4.dae  tankSet1_stainlessSteel_2.dae  tankSet2_stainlessSteel.dae  tankSet3Pipe_stainlessSteel.dae  tankSet3Support_stainlessSteel_1.dae  tankSet3Support_stainlessSteel_2.dae  tankSet3Support_stainlessSteel_3.dae  tankSet3Tank_stainlessSteel_1.dae  tankSet3Tank_stainlessSteel_2.dae  tankSet4_stainlessSteel_1.dae  tankSet4_stainlessSteel_2.dae  verticalPipeSet_stainlessSteel_3.dae  walls_boratedConcrete.dae
urdf/: tb3_with_RadSensor.sdf  tb3_with_RadSensor.urdf
worlds/reactor_room/models/: MezzanineControlSystem_aluminium_1.dae  MezzanineControlSystem_aluminium_2.dae  MezzanineOverheadTanks_stainlessSteel.dae  MezzaninePipework_stainlessSteel_1.dae  MezzaninePipework_stainlessSteel_2.dae  MezzaninePipework_stainlessSteel_3.dae  MezzaninePipework_stainlessSteel_4.dae  MezzaninePipework_stainlessSteel_5.dae  MezzanineShielding_boratedConcrete_2.dae  MezzanineTankSet1_stainlessSteel.dae  MezzanineTankSet3Plinth_concrete.dae  MezzanineTankSet4_stainlessSteel.dae  MezzanineWalls_concrete.dae  StairsHandrail_aluminium_2.dae  Stairs_aluminium.dae  TankShielding_boratedConcrete.dae  tankSet1_pipework_stainlessSteel_1.dae  tankSet1_stainlessSteel_1.dae  tankSet3Tank_stainlessSteel_3.dae  tankSetPlinth_concrete.dae  verticalPipeSetAccess_stainlessSteel.dae  verticalPipeSet_stainlessSteel_1.dae  verticalPipeSet_stainlessSteel_2.dae
